Support JDK 9+